# CSE412-MusicApp

./: .gitignore  README.md  compose.yaml  package-lock.json  package.json  turbo.json
apps/api/: .env.example  .gitignore  README.md  main.py  package.json  pyproject.toml
apps/api/data/: album.csv  appuser.csv  artist.csv  credits.csv  review.csv  song.csv
apps/api/db/: connection.py  create_table.sql  load_data.sql  musicdb.sql  phase3_dump.sql
apps/api/routes/: albums.py  artists.py  reviews.py  songs.py  users.py
apps/api/scripts/: get_data.py  load_csv_to_postgres.py
apps/web/: README.md  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/components/: theme-toggle.tsx
apps/web/app/components/ui/: badge.tsx  button.tsx  input.tsx
apps/web/app/lib/: api.ts
apps/web/app/styles/: globals.css
