[project]
name = "api"
version = "0.1.0"
description = "FastAPI application for the CSE412 Music App"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "musicbrainzngs>=0.7.1",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.0.0",
    "spotipy>=2.26.0",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "ruff",
]
